--- a/ZodiacChart/app/src/main/res/values/colors.xml
+++ b/ZodiacChart/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="colorOrange">#ff7049</color>
     <color name="colorBlack">#333333</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorLine">#eaeaeaea</color>
+    <color name="colorLine">#DEE3E7</color>
+    <color name="colorInterval">#EFF2F4</color>
     <color name="colorFour">#444444</color>
     <color name="colorGray">#44444444</color>
 </resources>
