--- a/ZodiacChart/app/src/main/res/layout/activity_main.xml
+++ b/ZodiacChart/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,14 @@
         android:id="@+id/next_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:background="@color/colorOrange" />
+    <Button
+    android:id="@+id/second_ui"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/next_activity"
+    android:layout_centerHorizontal="true"
+    android:background="@color/colorOrange" />
+
 </RelativeLayout>
