--- a/ZodiacChart/app/src/main/res/values/colors.xml
+++ b/ZodiacChart/app/src/main/res/values/colors.xml
@@ -10,4 +10,15 @@
     <color name="colorInterval">#EFF2F4</color>
     <color name="colorFour">#444444</color>
     <color name="colorGray">#44444444</color>
+
+    <color name="colorLunar">#ee4f69</color>
+    <color name="colorWeek">#727d85</color>
+    <color name="colorYi">#18ad7b</color>
+    <color name="colorJi">#ee4f69</color>
+    <color name="colorHoroscopeLine">#fdd3b2</color>
+    <color name="colorYiJi">#ec9248</color>
+    <color name="colorYiJiDetail">#f3bc98</color>
+    <color name="colorLayoutSelectored">#80f8f8f8</color>
+    <color name="colorTimeLine">#fddfc5</color>
+
 </resources>
