--- a/News/app/src/main/res/layout/news_item.xml
+++ b/News/app/src/main/res/layout/news_item.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:layout_marginBottom="15dp">
 
     <TextView
         android:id="@+id/title"
@@ -12,9 +11,10 @@
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@id/news_pic1"
         android:paddingLeft="15dp"
+        android:layout_marginTop="12dp"
         android:text="123"
         android:textColor="@color/colorText"
-        android:textSize="20dp"
+        android:textSize="16dp"
         />
 
     <TextView
@@ -26,7 +26,7 @@
         android:gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="15dp"
-        android:textSize="15dp"
+        android:textSize="12dp"
         android:text="234"
         android:textColor="@color/colorAuthor"/>
 
@@ -37,6 +37,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
         android:src="@drawable/ic_launcher_background" />
 
 </RelativeLayout>
