--- a/News/app/src/main/res/layout/news_item_three.xml
+++ b/News/app/src/main/res/layout/news_item_three.xml
@@ -15,6 +15,7 @@
         android:textColor="@color/colorText"/>
     <LinearLayout
         android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
@@ -25,12 +26,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_launcher_background"/>
         <ImageView
             android:id="@+id/news_pic2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="7dp"
             android:src="@drawable/ic_launcher_background"/>
         <ImageView
@@ -38,6 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="7dp"
             android:src="@drawable/ic_launcher_background"/>
     </LinearLayout>
