--- a/News/app/src/main/res/layout/news_item_two.xml
+++ b/News/app/src/main/res/layout/news_item_two.xml
@@ -15,6 +15,7 @@
         android:textColor="@color/colorText"/>
     <LinearLayout
         android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
@@ -24,15 +25,15 @@
             android:id="@+id/news_pic1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_launcher_background"/>
         <ImageView
             android:id="@+id/news_pic2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_launcher_background"/>
     </LinearLayout>
     <TextView
