--- a/News/app/src/main/res/layout/news_item.xml
+++ b/News/app/src/main/res/layout/news_item.xml
@@ -1,34 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="15dp">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/news_pic1"
-        android:paddingLeft="15dp"
-        android:layout_marginTop="12dp"
-        android:text="123"
-        android:textColor="@color/colorText"
-        android:textSize="16dp"
-        />
-
-    <TextView
-        android:id="@+id/author_name"
-        android:layout_below="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
-        android:textSize="12dp"
-        android:text="234"
-        android:textColor="@color/colorAuthor"/>
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/news_pic1"
@@ -38,6 +12,30 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/ic_launcher_background" />
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@id/news_pic1"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="12dp"
+        android:text="123"
+        android:textColor="@color/colorText"
+        android:textSize="16dp"
+        />
+
+    <TextView
+        android:id="@+id/author_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/news_pic1"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:textSize="12dp"
+        android:text="234"
+        android:textColor="@color/colorAuthor"/>
 </RelativeLayout>
